--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '2.4'
 
 services:
+  openstreetmap:
+    image: overv/openstreetmap-tile-server:v1.6.0
+    ports:
+      - 8081:80
+    volumes:
+      - openstreetmap-data:/var/lib/postgresql/12/main
+    command: 'run'
+    networks:
+      - maps
+
   mapproxy:
     build:
       context: ./mapproxy
@@ -9,3 +19,15 @@ services:
       - 8080:8080
     volumes:
       - ./conf/mapproxy:/mapproxy
+    depends_on:
+      - openstreetmap
+    networks:
+      - maps
+
+volumes:
+  openstreetmap-data:
+    external: true
+
+networks:
+  maps:
+    driver: bridge
